[package]
name = "zaroxi-core-platform-syntax"
version = "0.1.0"
edition = "2024"
description = "Syntax grammar loading and runtime helpers."
license = "MIT"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
libloading = { workspace = true, optional = true }
tree-sitter = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
ropey = { workspace = true }
cc = { workspace = true }

# Explicit dependency mapping for the theme crate used by theme_map.rs.
# The source imports `zaroxi_theme::...` so we provide an alias named
# `zaroxi_theme` that points at the interface-theme package in the workspace.
zaroxi_theme = { package = "zaroxi-interface-theme", path = "../zaroxi-interface-theme" }

[features]
# Optional dynamic loading for runtime plugins / grammars.
dynamic-loading = ["libloading"]
