[package]
name = "zaroxi-core-platform-syntax"
version = "0.1.0"
edition = "2024"
description = "Syntax grammar loading and runtime helpers."
license = "MIT"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
libloading = { workspace = true, optional = true }
tree-sitter = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
ropey = { workspace = true }
cc = { workspace = true }

# Note: theme dependency removed to preserve layer rules (core -> interface is forbidden).
# The crate now uses an internal theme shim for the minimal types it needs.

[features]
# Dynamic loading of bundled runtime Tree-sitter grammars.  Enabled by default
# because this crate ships its own `runtime/treesitter` grammars and is expected
# to perform real highlighting.  Consumers that want the lightweight stub (no
# native `libloading`) can opt out with `default-features = false`.
default = ["dynamic-loading"]
dynamic-loading = ["libloading"]
