[package]
name = "zaroxi-core-platform-terminal"
version = "0.1.0"
edition = "2024"
description = "Integrated terminal backend: PTY process management + VT emulation."
license = "MIT"

[dependencies]
# Cross-platform PTY layer (Unix openpty + Windows ConPTY) from the WezTerm
# project. Chosen for its safe, portable API so this crate stays `unsafe`-free.
portable-pty = "0.9"
# Pure terminal emulator: VT parser + screen/grid model with scrollback, ANSI
# colours (16/256/truecolour), cell attributes and alternate-screen support.
vt100 = "0.16"
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
