# Migration note (updated):
# - The mistaken nested crate `crates/zaroxi-core-workspace-files/zaroxi-workspace`
#   was removed in a previous commit. This manifest now targets the flat
#   workspace layout: `crates/zaroxi-core-workspace-files`.
# - No remaining references to `zaroxi-workspace` should exist in this crate.
[package]
name = "zaroxi-core-workspace-files"
version = "0.1.0"
edition = "2024"
description = "Filesystem view and metadata for workspaces."
license = "MIT"

[dependencies]
# Core workspace files crate depends on serde for (de)serializing state and
# on the canonical kernel id crate for UuidId.
serde = { workspace = true }
zaroxi-kernel-id = { workspace = true }
