# Migration note (updated):
# - The previous nested crate path was removed in an earlier commit.
# - This manifest targets the flat workspace layout: `crates/zaroxi-core-workspace-files`.
[package]
name = "zaroxi-core-workspace-files"
version = "0.1.0"
edition = "2024"
description = "Filesystem view and metadata for workspaces."
license = "MIT"

[dependencies]
# Core workspace files crate depends on serde for (de)serializing state and
# on the canonical kernel id crate for UuidId.
serde = { workspace = true }
zaroxi-kernel-id = { workspace = true }

# Workspace-owned external crates (hoisted to workspace root pins).
thiserror = { workspace = true }
memmap2 = { workspace = true }
