[package]
name = "zaroxi-domain-ai"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AI domain models: context collection, ranking, packing, and prompt construction (pure logic)."

[lib]
name = "zaroxi_domain_ai"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zaroxi-protocol = { workspace = true }

[features]
default = []
