[package]
name = "zaroxi-domain-editor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Editor domain: document, cursor, selection, history and decoration models (pure logic)."

[dependencies]
zaroxi-workspace-files = { workspace = true }
ropey = "1.6"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
memmap2 = "0.9"
tokio = { workspace = true, features = ["sync"] }
zaroxi-platform-syntax = { workspace = true }
zaroxi-interface-theme = { workspace = true }
parking_lot = { workspace = true }
